--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
@@ -123,13 +123,13 @@ h1 {
 // }
 
 ::ng-deep .mat-chip.mat-standard-chip {
-    background-color: #ffffff;
+    background-color: #D6DCE5;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 22px;
     color: #202B34;
-    border: 1px solid #ffffff;
+    border: 1px solid #202B34;
 
     &:hover {
         background-color: transparent;
