--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.scss
@@ -3,14 +3,18 @@
     background: #FFFFFF;
     border-radius: 10px;
     padding: 15px;
-    height: 210px;
+    height: 190px;
 
     @media screen and (max-width: 1200px) {
-        height: 230px;
+        height: 195px;
     }
 
     @media screen and (max-width: 980px) {
-        height: 300px;
+        height: 200px;
+    }
+
+    @media screen and (max-width: 768px) {
+        height: 290px;
     }
 
     @media screen and (max-width: 445px) {
@@ -21,7 +25,7 @@
         height: 340px;
     }
     @media screen and (max-width: 390px) {
-        height: 390px;
+        height: 340px;
     }
 }
 
@@ -70,7 +74,7 @@
     font-weight: normal;
     font-size: 14px;
     color: rgba(32, 43, 52, 0.8);
-    padding: 0px 0px 0px 15px;
+    padding: 10px 0px 0px 15px;
 
     @media screen and (max-width: 767px) {
         display: none;
@@ -146,7 +150,7 @@
     margin-top: 25px;
     
     .employee-skill-display {
-        padding: 10px 10px 0px 0px;                
+        padding: 7px 10px 0px 0px;                
 
         @media screen and (max-width: 450px) {
             padding: 10px 20px 0px 30px;
