--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-filter/employee-search-filter.component.scss
@@ -1,4 +1,4 @@
-$break-small: 510px;
+$break-small: 700px;
 $color-black-normal: #202B34;
 $color-black-hover: #000000;
 $color-white: #FFFFFF;
@@ -8,6 +8,20 @@ $color-white: #FFFFFF;
 }
 
 .col-lg-2{
+    padding-right: 0px;
+    @media screen and (max-width: $break-small) {
+        padding-right: 15px;
+    }
+}
+
+.col-lg-3{
+    padding-right: 0px;
+    @media screen and (max-width: $break-small) {
+        padding-right: 15px;
+    }
+}
+
+.col-lg-1{
     padding-right: 0px;
     @media screen and (max-width: $break-small) {
         padding-right: 15px;
@@ -97,30 +111,6 @@ h1 {
         background: $color-black-hover;
     }
 }
-
-// .mat-form-field{
-//     width: 110px;
-//     height: 44px;
-//     background: $color-white;
-//     border: 1px solid #B5B5B5;
-//     color: $color-black-normal;
-//     border-radius: 5px;
-
-//     font-style: normal;
-//     font-weight: normal;
-//     font-size: 12px;
-//     line-height: 16px;
-//     margin: 5px 5px 5px 0px;
-//     padding: 0px 5px 0px 5px;
-// }
-
-// .mat-form-field{
-//     text-align: center !important;
-// }
-
-// ::ng-deep .mat-form-field-underline {
-//     display: none;
-// }
 
 ::ng-deep .mat-chip.mat-standard-chip {
     background-color: #D6DCE5;
