--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-profile/employee-profile.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-profile/employee-profile.component.scss
@@ -9,3 +9,11 @@ $small-screen: 500px;
     background-size: 100% 20%, cover;
   }
 }
+
+.employee-details {
+  margin: 0 5%;
+}
+
+.employee-profile-cards {
+  margin: 10px;
+}
