--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-hero/employee-hero.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-hero/employee-hero.component.scss
@@ -2,7 +2,7 @@ $small-screen: 500px;
 $medium-screen: 900px;
 
 .employee-hero {
-  padding: 60px 50px;
+  padding: 60px 50px 0px 50px;
 }
 
 .image {
