--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/nav-bar/nav-bar.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default">
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" (click)="goToHome()">
             <img src="../../../../assets/images/PkLogo.png" width="30" height="30" class="d-inline-block align-top"
                 alt="">
         </a>
@@ -9,10 +9,10 @@
             <fa-icon *ngIf="toggle" class="slider-icon side-nav-toggle" [icon]="faBars" size="lg" (click)="toggleIcon()"></fa-icon>
             <fa-icon *ngIf="!toggle" class="slider-icon side-nav-toggle" [icon]="faTimes" size="lg" (click)="toggleIcon()"></fa-icon>
     </div> -->
-    <span class="pk-title">
+    <span class="pk-title" (click)="goToHome()">
         Communities
     </span>
-    <span class="profile">
+    <span class="profile" (click)="goToProfile()">
         <fa-icon class="slider-icon side-nav-toggle" [icon]="faUserCircle" size="lg"></fa-icon>
         <span *ngIf="!isMobile" class="pk-title">
             {{userName}}
