--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/expert-search/expert-search.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/expert-search/expert-search.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div>
-        <app-employee-search-filter (employeeResponseEvent)="message($event)"></app-employee-search-filter>
-        <app-employee-search-results [employeeSearchResult]="employeeSearchResult"></app-employee-search-results>
+        <app-employee-search-filter (employeeResponseEvent)="message($event)" ></app-employee-search-filter>
+        <app-employee-search-results [employeeSearchResult]="employeeSearchResult" (moreEmployees)="getMoreEmployees()"></app-employee-search-results>
     </div>
 </div>
