Add auto scroll to top

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-results/employee-search-results.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-results/employee-search-results.component.html
@@ -27,4 +27,7 @@
     <div class="view-more-employees" *ngIf="employeeSearchResults.length < employeeSearchResultsCount">
             <button type="submit" class="btn btn-major" (click)="viewMore()">View More</button>
     </div>
+    <button *ngIf="windowScrolled" class="btn btn-scroll-top" title="Go to top" (click)="scrollToTop()">
+            <fa-icon class="slider-icon" [icon]="faArrowUp" size="md"></fa-icon>
+    </button>
 </div>
