--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-results/employee-search-results.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/expert-search/employee-search-results/employee-search-results.component.scss
@@ -1,38 +1,79 @@
+$break-small: 510px;
+$color-black-normal: #202b34;
+$color-black-hover: #000000;
+$color-white: #ffffff;
 
-  .employee-results {
-    margin-bottom: 100px;
-  }
+.employee-results {
+  margin-bottom: 100px;
+}
 
-  .cards-nav {
-    display: inline-block; 
-    width: 100%;
-  }
-  .cards-count {
-    float: left;
-  }
-  .sort {
-    float: right;
-  }
+.cards-nav {
+  display: inline-block;
+  width: 100%;
+}
+.cards-count {
+  float: left;
+}
+.sort {
+  float: right;
+}
 
-  .showing-text{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 18px;
-    text-align: right;
-    color: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 67px;
-  }
+.showing-text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 18px;
+  text-align: right;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 67px;
+}
 
-  .sort-by-text{
-      padding-left: 8px;
-  }
+.sort-by-text {
+  padding-left: 8px;
+}
 
-  .view-more-employees{
-    display: flex;
-    justify-content: center;
-    margin: 30px;
+.view-more-employees {
+  display: flex;
+  justify-content: center;
+  margin: 30px;
+}
+
+#myBtn {
+  display: block;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #008522;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+.btn-scroll-top {
+  display: block;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: $color-black-normal;
+  color: white;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+
+  @media screen and (max-width: $break-small) {
+    bottom: 5px;
+    right: 5px;
   }
+}
