--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -66,7 +66,7 @@
 
             </div>
             <div class="employee-skills-display">
-                <div class="row employee-skill-display" *ngFor="let employeeSkill of employee.employeeSkills">
+                <div class="row employee-skill-display" *ngFor="let employeeSkill of employee.employeeSkills.slice(0, 5)">
                     <div class="col-6 skill-name"><span>{{employeeSkill.textName | truncate:21:"..."}}</span>
                     </div>
                     <div class="col-6 employee-rating-bar">
