--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/nav-bar/nav-bar.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/shared/nav-bar/nav-bar.component.html
@@ -12,7 +12,7 @@
     <span class="pk-title" (click)="goToHome()">
         Communities
     </span>
-    <span class="profile">
+    <span class="profile" (click)="goToProfile()">
         <fa-icon class="slider-icon side-nav-toggle" [icon]="faUserCircle" size="lg"></fa-icon>
         <span *ngIf="!isMobile" class="pk-title">
             {{userName}}
