--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -33,7 +33,7 @@
                         <p *ngIf="!!employee.roleDescription">{{employee.roleDescription | truncate:100:"..."}}</p>
                     </div>
                     <!-- Hiding View profile until view profile page is ready -->
-                    <button type="button" (click)="goToProfile(employee.employeeId)" class="btn btn-outline-secondary view-profile">View Profile</button>
+                    <!-- <button type="button" (click)="goToProfile(employee.employeeId)" class="btn btn-outline-secondary view-profile">View Profile</button> -->
                 </div>
             </div>
         </div>
