--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
@@ -1,5 +1,6 @@
 <div class="employee-info">
-        <div class="employee-available">
+        <!-- {{employeeInfoDetails | json}} -->
+        <div class="employee-available" *ngIf="!employeeInfoDetails.onProject">
                 <div class="row">
                         <div class="col-1">
                                 <fa-icon class="slider-icon" [icon]="faCheckCircle" size="md"
@@ -10,6 +11,7 @@
                         </div>
                 </div>
         </div>
+        <!-- No data in api response -->
         <div class="employee-start-date">
                 <div class="row">
                         <div class="col-1">
@@ -20,17 +22,20 @@
                         </div>
                 </div>
         </div>
-        <div class="employee-location">
+        <div class="employee-location" *ngIf="employeeInfoDetails.city || employeeInfoDetails.state">
                 <div class="row">
                         <div class="col-1">
                                 <fa-icon class="slider-icon" [icon]="faMapMarkerAlt" size="md"></fa-icon>
                         </div>
                         <div class="col-10">
-                                <span class="employee-info-key">Location: </span> Seattle, WA
+                                <span class="employee-info-key">Location: </span>
+                                <span *ngIf="employeeInfoDetails.city"> {{employeeInfoDetails.city}}</span>
+                                <span *ngIf="employeeInfoDetails.state">, {{employeeInfoDetails.state}}</span>
                         </div>
                 </div>
         </div>
-        <div class="employee-id">
+        <!-- No data in api response -->
+        <div class="employee-id" >
                 <div class="row">
                         <div class="col-1">
                                 <fa-icon class="slider-icon" [icon]="faIdCard" size="md"></fa-icon>
@@ -40,6 +45,7 @@
                         </div>
                 </div>
         </div>
+        <!-- No data in api response -->
         <div class="employee-manager">
                 <div class="row">
                         <div class="col-1">
@@ -50,16 +56,17 @@
                         </div>
                 </div>
         </div>
-        <div class="employee-email">
+        <div class="employee-email" *ngIf="employeeInfoDetails.email">
                 <div class="row">
                         <div class="col-1">
                                 <fa-icon class="slider-icon" [icon]="faEnvelope" size="md"></fa-icon>
                         </div>
                         <div class="col-10">
-                                <span class="employee-info-key">Email: </span> lswanson@pkglobal.com
+                                <span class="employee-info-key">Email: </span> {{employeeInfoDetails.email}}
                         </div>
                 </div>
         </div>
+        <!-- No data in api response -->
         <div class="employee-coe">
                 <div class="row">
                         <div class="col-1">
@@ -70,6 +77,7 @@
                         </div>
                 </div>
         </div>
+        <!-- No data in api response -->
         <div class="employee-service-line">
                 <div class="row">
                         <div class="col-1">
