--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-profile/employee-profile.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-profile/employee-profile.component.html
@@ -1,13 +1,13 @@
-<div class="employee-profile">
-    <app-employee-hero></app-employee-hero>
+<div class="employee-profile" *ngIf="displayProfile">
+    <app-employee-hero [employeeHeroDetails]="employeeDetails"></app-employee-hero>
     <div class="employee-details">
         <div class="row">
             <div class="col-lg-3">
-                <app-employee-info class="employee-profile-cards"></app-employee-info>
-                <app-employee-skills class="employee-profile-cards"></app-employee-skills>
+                <app-employee-info class="employee-profile-cards" [employeeInfoDetails]="employeeDetails"></app-employee-info>
+                <app-employee-skills class="employee-profile-cards" [employeeSkillDetails]="employeeDetails.employeeSkills"></app-employee-skills>
             </div>
             <div class="col-lg-9">
-                <app-employee-experience class="employee-profile-cards"></app-employee-experience>
+                <app-employee-experience class="employee-profile-cards" [employeeExperienceDetails]="employeeDetails"></app-employee-experience>
             </div>
         </div>
     </div>
