--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-skills/employee-skills.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-skills/employee-skills.component.html
@@ -1,10 +1,11 @@
-<div class="employee-skills">
+<div class="employee-skills" *ngIf="employeeSkillDetails.length > 0">
+    <!-- {{employeeSkillDetails | json}} -->
         <div class="employee-skills-title">
             <p>Skills</p>
         </div>
         <div class="employee-skills-list">
-            <div class="employee-skill" *ngFor="let skill of skills">
-                <p class="employee-skill-name">{{skill.name}}</p>
+            <div class="employee-skill" *ngFor="let skill of employeeSkillDetails">
+                <p class="employee-skill-name">{{skill.textName}}</p>
                 <div class="progress" matTooltip="Self Rating: {{skill.skillRating}}/5" matTooltipPosition="right">
                     <div class="progress-bar" role="progressbar" [style.width.%]="skill.skillRating*20"
                         aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
