--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.scss
@@ -1,32 +1,39 @@
+// .employee-card {
+//     margin-bottom: 17px;
+//     background: #FFFFFF;
+//     border-radius: 10px;
+//     padding: 15px;
+//     height: 190px;
+
+//     @media screen and (max-width: 1200px) {
+//         height: 195px;
+//     }
+
+//     @media screen and (max-width: 980px) {
+//         height: 200px;
+//     }
+
+//     @media screen and (max-width: 768px) {
+//         height: 290px;
+//     }
+
+//     @media screen and (max-width: 445px) {
+//         height: 300px;
+//     }
+
+//     @media screen and (max-width: 431px) {
+//         height: 340px;
+//     }
+//     @media screen and (max-width: 390px) {
+//         height: 340px;
+//     }
+// }
+
 .employee-card {
     margin-bottom: 17px;
     background: #FFFFFF;
     border-radius: 10px;
     padding: 15px;
-    height: 190px;
-
-    @media screen and (max-width: 1200px) {
-        height: 195px;
-    }
-
-    @media screen and (max-width: 980px) {
-        height: 200px;
-    }
-
-    @media screen and (max-width: 768px) {
-        height: 290px;
-    }
-
-    @media screen and (max-width: 445px) {
-        height: 300px;
-    }
-
-    @media screen and (max-width: 431px) {
-        height: 340px;
-    }
-    @media screen and (max-width: 390px) {
-        height: 340px;
-    }
 }
 
 .display-picture {
@@ -201,6 +208,22 @@
 ::ng-deep .mat-snack-bar-container.snack-bar-success {
     background-color: #28a745;
     color: #ffffff;
+}
+
+.btn-view-more-skills {
+    font-family: Roboto;
+    cursor: pointer;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 22px;
+    padding: 5px 10px 0px 0px;
+    color: #1B83B1;
+    align-self: flex-end;
+
+    &:hover{
+        text-decoration: underline;
+    }
 }
 
 
