Add delay tool tip and static height of cards

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -1,4 +1,4 @@
-<div class="employee-card">
+<div [ngClass]="displayMoreSkills ? 'employee-card-show-more' : 'employee-card'">
     <div class="row">
         <div class="col-md-7">
             <div class="row">
@@ -30,11 +30,12 @@
                         </div> -->
 
                     <div class="row employee-description">
-                        <p *ngIf="!!employee.roleDescription">{{employee.roleDescription | truncate:100:"..."}}</p>
+                        <p *ngIf="!!employee.roleDescription" matTooltip="{{employee.roleDescription}}"
+                        matTooltipPosition="right">{{employee.roleDescription | truncate:230:"..."}}</p>
                     </div>
                     <!-- Hiding View profile until view profile page is ready -->
-                    <button type="button" (click)="goToProfile(employee.employeeId)"
-                        class="btn btn-outline-secondary view-profile">View Profile</button>
+                    <!-- <button type="button" (click)="goToProfile(employee.employeeId)"
+                        class="btn btn-outline-secondary view-profile">View Profile</button> -->
                 </div>
             </div>
         </div>
