--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.scss
@@ -1,35 +1,48 @@
-// .employee-card {
-//     margin-bottom: 17px;
-//     background: #FFFFFF;
-//     border-radius: 10px;
-//     padding: 15px;
-//     height: 190px;
-
-//     @media screen and (max-width: 1200px) {
-//         height: 195px;
-//     }
-
-//     @media screen and (max-width: 980px) {
-//         height: 200px;
-//     }
-
-//     @media screen and (max-width: 768px) {
-//         height: 290px;
-//     }
-
-//     @media screen and (max-width: 445px) {
-//         height: 300px;
-//     }
-
-//     @media screen and (max-width: 431px) {
-//         height: 340px;
-//     }
-//     @media screen and (max-width: 390px) {
-//         height: 340px;
-//     }
-// }
-
 .employee-card {
+    margin-bottom: 17px;
+    background: #FFFFFF;
+    border-radius: 10px;
+    padding: 15px;
+    height: 210px;
+
+    @media screen and (max-width: 1200px) {
+        height: 210px;
+    }
+
+    @media screen and (max-width: 990px) {
+        height: 230px;
+    }
+
+    @media screen and (max-width: 768px) {
+        height: 310px;
+    }
+
+    @media screen and (max-width: 450px) {
+        height: 320px;
+    }
+
+    @media screen and (max-width: 445px) {
+        height: 360px;
+    }
+
+    @media screen and (max-width: 430px) {
+        height: 330px;
+    }
+
+    @media screen and (max-width: 380px) {
+        height: 350px;
+    }
+
+    @media screen and (max-width: 380px) {
+        height: 380px;
+    }
+
+    @media screen and (max-width: 275px) {
+        height: 420px;
+    }
+}
+
+.employee-card-show-more {
     margin-bottom: 17px;
     background: #FFFFFF;
     border-radius: 10px;
