--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -65,7 +65,8 @@
             </div>
             <div class="employee-skills-display">
                 <div class="row employee-skill-display" *ngFor="let employeeSkill of displayEmployeeSkills">
-                    <div class="col-6 skill-name"><span>{{employeeSkill.textName | truncate:21:"..."}}</span>
+                    <div class="col-6 skill-name" matTooltip="{{employeeSkill.textName}}"
+                    matTooltipPosition="right"><span>{{employeeSkill.textName | truncate:21:"..."}}</span>
                     </div>
                     <div class="col-6 employee-rating-bar">
                         <div class="progress" matTooltip="Self Rating: {{employeeSkill.skillRating}}/5"
